[gd_scene load_steps=7 format=3 uid="uid://80kj1bft3ove"]

[ext_resource type="Script" uid="uid://durd70d0lhduj" path="res://Scripts/UI/Game/LevelUpUI/level_up_card.gd" id="1_iwywl"]

[sub_resource type="LabelSettings" id="LabelSettings_m1pu8"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_buef4"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_6eoxt"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1pu8"]
bg_color = Color(0.340339, 0.340339, 0.340339, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buef4"]
bg_color = Color(0.273873, 0.273873, 0.273873, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LevelUpCard" type="Control"]
layout_mode = 3
anchor_right = 0.222
anchor_bottom = 0.617
offset_right = 0.255981
offset_bottom = 0.18396
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwywl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454524, 0.454524, 0.454524, 1)

[node name="rarete_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.5
offset_top = 32.0
offset_right = 98.5
offset_bottom = 64.0
grow_horizontal = 2
text = "Common"
label_settings = SubResource("LabelSettings_m1pu8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -74.0
offset_right = 65.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
text = "Stat ameliore"
label_settings = SubResource("LabelSettings_buef4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="value_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "stat value"
label_settings = SubResource("LabelSettings_6eoxt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -96.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_m1pu8")
theme_override_styles/normal = SubResource("StyleBoxFlat_buef4")
text = "CHOOSE"
